<resources>
    <string name="app_name">Dieta al plato</string>
    <string name="msgItemGuardado">¡Guardado!</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign UP</string>
    <string name="correo">Correo</string>
    <string name="cerrar">Cerrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="correo_educamadrid">Correo educamadrid</string>
    <string name="crear_usuario">crear usuario</string>
    <string name="apellido_del_cliente">Apellido del cliente</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="log_out">Log out</string>
    <string name="alergias">Alergias</string>
    <string name="patolog_as">Patologías</string>
    <string name="registra_un_nuevo_alimento">Registra un nuevo alimento</string>
    <string name="introduce_los_siguientes_datos_nutricionales_por_cada_100g_del_alimento">Introduce los siguientes datos nutricionales por cada 100g del alimento:</string>
    <string name="nombre_del_alimento">Nombre del alimento *</string>
    <string name="ej_manzana">Ej: Manzana</string>
    <string name="macronutrientes">Macronutrientes</string>
    <string name="pc">PC *</string>
    <string name="energ_a_e_100">Energía (E/100) *</string>
    <string name="prote_nas_prot_100">Proteínas (Prot/100) *</string>
    <string name="grasas_grasa_100">Grasas (Grasa/100) *</string>
    <string name="ags_100">AGS/100</string>
    <string name="agmi_100">AGMI/100</string>
    <string name="agpi_100">AGPI/100</string>
    <string name="colesterol_col_100">Colesterol (Col/100)</string>
    <string name="hidratos_de_carbono_hc_100">Hidratos de Carbono (HC/100) *</string>
    <string name="fibra_100">Fibra/100</string>
    <string name="micronutrientes">Micronutrientes</string>
    <string name="vitamina_c_vit_c_100">Vitamina C (Vit C/100)</string>
    <string name="vitamina_b6_vit_b6_100">Vitamina B6 (Vit B6/100)</string>
    <string name="vitamina_e_vit_e_100">Vitamina E (Vit E/100)</string>
    <string name="hierro_fe_100">Hierro (Fe/100)</string>
    <string name="sodio_na_100">Sodio (Na/100)</string>
    <string name="calcio_ca_100">Calcio (Ca/100)</string>
    <string name="potasio_k_100">Potasio (K/100)</string>
    <string name="guardar">Guardar</string>
    <string name="_0">0</string>
    <string name="usuario_de_la_aplicaci_n">Usuario de la aplicación. *</string>
    <string name="constrase_a">Constraseña. *</string>
    <string name="hintEmail">nnnnnnnn@dietetica.davinci</string>
    <string name="rango_de_calorias_objetivo">Rango de calorias objetivo</string>
    <string name="minkcal">minKcal</string>
    <string name="registrar">Iniciar Sesión</string>
    <string name="iniciar_sesi_n">Registrar</string>
    <string name="cliente">Cliente</string>
    <string name="nombre_del_clienteE">Nombre del cliente *</string>
    <string name="apellido_del_clienteE">Apellido del cliente *</string>
    <string name="rango_de_calorias">Rango de calorias *</string>
    <string name="maxkcal">maxKcal</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="paciente">Paciente</string>
    <string name="nombre_del_paciente">Nombre del paciente *</string>
</resources>