<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9EFDF"
    android:padding="32dp"
    tools:context=".LogIn_Activity">

    <!-- Fondo -->
    <ImageView
        android:id="@+id/fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="Fondo"
        app:srcCompat="@drawable/fondo_android"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Velo (superposición semitransparente) -->
    <View
        android:id="@+id/velo"
        android:layout_width="1283dp"
        android:layout_height="802dp"
        android:background="#DDE9EFDF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- gmail -->

    <TextView
        android:id="@+id/textView20"
        android:layout_width="947dp"
        android:layout_height="358dp"
        android:background="@drawable/esquinas_redondeadas_boton_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <!-- passwordd-->

    <!-- boton login -->


    <!-- mensaje error login -->

    <ImageView
        android:id="@+id/icon_account"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/icono_account"
        app:layout_constraintBottom_toTopOf="@id/text_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- boton Sign UP -->

    <!-- boton mostrar password -->

    <!-- boton ocultar password -->

    <ImageButton
        android:id="@+id/buttonHidePasswd"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:onClick="ocultarPassword"
        android:scaleType="fitXY"
        android:src="@drawable/open_eye"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.338" />

    <ImageButton
        android:id="@+id/buttonSeePasswd"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:onClick="mostrarPassword"
        android:scaleType="fitXY"
        android:src="@drawable/closed_eye"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.338" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="810dp"
        android:layout_height="308dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20">

        <EditText
            android:id="@+id/text_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/esquinas_redondeadas"
            android:fontFamily="@font/lily_script_one"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#027C68"
            android:textColorHint="#027C68"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/esquinas_redondeadas"
            android:fontFamily="@font/lily_script_one"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#027C68"
            android:textColorHint="#027C68"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_food_item"
            android:fontFamily="@font/lily_script_one"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#027C68"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_food_item"
            android:fontFamily="@font/lily_script_one"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textColor="#027C68"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="15dp"
        android:background="@drawable/esquinas_errortext"
        android:gravity="center|center_horizontal"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/icon_account"
        app:layout_constraintVertical_bias="0.973" />


</androidx.constraintlayout.widget.ConstraintLayout>
